--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="styles.css">
 
     <title>Travel Website</title>
   </head>
@@ -18,7 +19,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="main.js" type="text/javascript"></script>
   
     <!--Nav bar-->
 
@@ -422,241 +422,7 @@
     <a class="text-white" href="https://example.com">TechTravel.com</a>
   </div>
 </footer>
-
-
-<!---->
-<style>
-  @media (prefers-reduced-motion: no-preference) {
-    * {
-      scroll-behavior: smooth;
-    }
-  }
-
-  body
-  {
-    background-color: #040c24;
-    margin-top: 35px;
-    font-family: 'Isidora', sans-serif;
-    font-size: medium;
-  }
-
-  .text-center
-  {
-    margin-bottom: 0;
-  }
-
-  .navbar-brand
-  {
-    font-size: 15px;
-  }
-
-  .centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -150%);
-  font-size: 50px;
-  font-weight: bold;
-  color: #ffffff;
-  }
-
-  .low-opacity
-  {
-    opacity: 50%;
-    object-fit: cover;
-    object-position: 100% 50%;
-  }
-
-  .trip1
-  {
-    object-fit: cover;
-    object-position: 100% 90%;
-  }
-
-  .trip2
-  {
-    object-fit: cover;
-    object-position: 100% 40%;
-  }
-
-  .carousel-item {
-  text-align: center;
-  overflow: hidden;
-  }
-
-  .left-align
-  {
-    text-align: left;
-  }
-
-  .carousel-item img {
-    max-height: 300px;
-    max-width: 100%;
-  }
-
-  .no-border {
-    border: none;
-    border-bottom: 2px solid white;
-    border-bottom-style: solid;
-    background: transparent;
-    box-shadow: none; /* You may want to include this as bootstrap applies these styles too */
-    width: 100%;
-  }
-
-  .lightbox {
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-
-  .footer {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background-color: #18141c;
-    color: white;
-    text-align: center;
-    flex-wrap: wrap;
-  }
-  
-  .para {
-    margin-top: 40px;
-    text-align: left;
-    text-justify: inter-word;
-    font-size: 60px;
-    color: white;
-    box-sizing: border-box;
-  }
-
-  .para2 {
-    margin-top: 40px;
-    text-align: left;
-    text-justify: inter-word;
-    color: white;
-    box-sizing: border-box;
-    width: 500px;
-    height: 400px;
-  }
-
-  .para1 {
-    margin-top: 30px;
-    text-align: justify;
-    text-justify: inter-word;
-    font-size: 20px;
-    color: white;
-    margin-left: 10px;
-    float: left;
-  }
-
-  
-  .take-right
-  {
-    font-size: 20px;
-    font-weight: bold;
-    color: #ffffff;
-    float: right;
-  }
-
-  .para-right
-  {
-    text-align:justify;
-  }
-
-  .btnclass {
-    border-radius: 10px;
-    border: none;
-    background-color: #48444c;
-    color: white;
-    text-transform: uppercase;
-    padding: 10px;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-  }
-
-  .send-button{
-    margin-top: 20px;
-    border-radius: 10px;
-    border: none;
-    background-color: #48444c;
-    color: white;
-  }
-
-  @media (min-width: 1200px) {
-  .aligncenter,.navbar-text:link
-  {
-    padding: 5px;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 17px;
-    text-decoration: none;
-    text-transform: uppercase;
-    text-indent: 5px;
-    white-space: nowrap;
-  } 
-
-  .btn-on-img1
-  {
-    position: absolute;
-    top: 80%;
-    left: 40%;
-    transform: translate(-20%, -300%);
-    font-size: 20px;
-    font-weight: bold;
-    color: #ffffff;
-  }
-
-  .btn-on-img2
-  {
-    position: absolute;
-    top: 80%;
-    left: 50%;
-    transform: translate(0%, -300%);
-    font-size: 20px;
-    font-weight: bold;
-    color: #ffffff;
-  }
-}
-
-
-@media (max-width: 1199px) {
-  .aligncenter,.navbar-text:link
-  {
-    padding: 5px;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 17px;
-    text-decoration: none;
-    text-transform: uppercase;
-    text-indent: 5px;
-    white-space: nowrap;
-  } 
-
-  .btn-on-img1
-  {
-    position: absolute;
-    top: 80%;
-    left: 40%;
-    transform: translate(-40%, -300%);
-    font-size: 20px;
-    font-weight: bold;
-    color: #ffffff;
-  }
-
-  .btn-on-img2
-  {
-    position: absolute;
-    top: 80%;
-    left: 50%;
-    transform: translate(0%, -300%);
-    font-size: 20px;
-    font-weight: bold;
-    color: #ffffff;
-  }
-}
-
-</style>
+</body>
+</html>
 
 
